fixing oclick logo in navbar and make better spacing in the laptop version

--- a/src/Components/Hero.css
+++ b/src/Components/Hero.css
@@ -85,6 +85,9 @@
   .hero{
     margin: 0 3.2rem;
   }
+  .section-hero {
+    padding: 15rem 0;
+  }
   .hero-img {
     width: 70%;
     margin: 0 auto;
